[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )

[node name="Start" type="Button" parent="."]
margin_left = 183.0
margin_top = 168.0
margin_right = 277.0
margin_bottom = 188.0
text = "START DEMO"

[node name="Button" type="Button" parent="."]
margin_left = 183.0
margin_top = 202.0
margin_right = 277.0
margin_bottom = 222.0
text = "CONTROLS "

[node name="Button2" type="Button" parent="."]
margin_left = 184.0
margin_top = 235.0
margin_right = 278.0
margin_bottom = 255.0
text = "CREDIT"

[node name="Level1" type="Button" parent="."]
margin_left = 149.0
margin_top = 67.0
margin_right = 203.0
margin_bottom = 120.0
text = "Level1"

[node name="Level2" type="Button" parent="."]
margin_left = 254.0
margin_top = 67.0
margin_right = 308.0
margin_bottom = 120.0
text = "Level2"

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 479.0
margin_bottom = 319.0

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
margin_left = 94.0
margin_top = 54.0
margin_right = 386.0
margin_bottom = 266.0

[node name="Label" type="Label" parent="Control/ColorRect"]
margin_left = 74.0
margin_top = 31.0
margin_right = 210.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "CONTROLS"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/ColorRect"]
margin_left = 75.0
margin_top = 94.0
margin_right = 211.0
margin_bottom = 193.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "WASD: move around
R: shoot
F: attact
SPACE: bomb
P: restart level
"
align = 1
valign = 1

[node name="close" type="Button" parent="Control/ColorRect"]
margin_left = 4.0
margin_top = 5.0
margin_right = 24.0
margin_bottom = 25.0
text = "X"

[node name="ColorRect2" type="ColorRect" parent="Control"]
visible = false
margin_left = 20.0
margin_top = 24.0
margin_right = 458.0
margin_bottom = 291.0

[node name="Label" type="Label" parent="Control/ColorRect2"]
margin_top = 17.0
margin_right = 438.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "CREDIT"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/ColorRect2"]
margin_top = 48.0
margin_right = 438.0
margin_bottom = 246.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "ASSET(LEVEL2):
 https://lphitori.itch.io/fantasy-rpg-tileset2-sand-town

ASSET(BOMB):
 https://engineering15.itch.io/pixel-pack

TUTORIAL(Destructible Tiles):
 https://www.youtube.com/watch?v=Zd6OhMDh6y0

TUTORIAL(BOMB):
https://www.bilibili.com/video/BV1gS4y1Y7Az"
align = 1
valign = 1

[node name="close2" type="Button" parent="Control/ColorRect2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 23.0
margin_bottom = 23.0
text = "X"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Control/ColorRect/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Control/ColorRect2/close2" to="." method="_on_close2_pressed"]
